[package]
name = "node-inspect"
version = "0.4.8"
authors = ["Stafi Technologies <technical@stafi.io>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4" }
derive_more = "0.99"
log = "0.4.8"
sc-cli = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-client-api = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-service = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-blockchain = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-core = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-runtime = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
structopt = "0.3.8"
