[package]
name = "node-inspect"
version = "0.4.9"
authors = ["Stafi Technologies <technical@stafi.io>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4" }
derive_more = "0.99"
log = "0.4.8"
sc-cli = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-client-api = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-service = { branch = "m1-compilation", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-blockchain = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-core = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-runtime = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
structopt = "0.3.8"
