[package]
name = "node-primitives"
version = "0.3.2"
authors = ["Stafi Technologies <technical@stafi.io>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
frame-system = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-application-crypto = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-core = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-runtime = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }

[dev-dependencies]
sp-serializer = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pretty_assertions = "0.6.1"

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-system/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
]
