[package]
name = "node-rpc"
version = "0.3.1"
authors = ["Stafi Technologies <technical@stafi.io>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpc-core = "14.2.0"
node-primitives = { version = "0.3.1", path = "../primitives" }
node-runtime = { version = "0.3.1", path = "../runtime" }
pallet-transaction-payment-rpc = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-client-api = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-consensus-babe = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-consensus-babe-rpc = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git'}
sc-consensus-epochs = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-finality-grandpa = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-finality-grandpa-rpc = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-keystore = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-rpc-api = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-rpc = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-api = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-block-builder = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-blockchain = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-consensus = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-consensus-babe = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-transaction-pool = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
substrate-frame-rpc-system = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }

