[package]
name = "node-runtime"
version = "0.6.0"
authors = ["Stafi Technologies <technical@stafi.io>"]
edition = "2018"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
integer-sqrt = { version = "0.1.2" }
serde = { version = "1.0.102", optional = true }
static_assertions = "1.1.0"
hex-literal = { version = "0.3.1", optional = true }

# primitives
sp-authority-discovery = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-consensus-babe = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-block-builder = { git = 'https://github.com/stafiprotocol/stafi-blockchain.git', default-features = false, branch = "master"}
sp-inherents = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
node-primitives = { default-features = false, path = "../primitives" }
sp-offchain = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-core = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-std = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-api = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-runtime = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-staking = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-keyring = { branch = "master", optional = true, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-session = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-transaction-pool = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-version = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-io = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }

# frame dependencies
frame-executive = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
frame-benchmarking = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git', optional = true }
frame-support = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
frame-system = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
frame-system-benchmarking = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git', optional = true }
frame-system-rpc-runtime-api = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-authority-discovery = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-authorship = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-babe = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-balances = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-collective = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-democracy = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-elections-phragmen = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-finality-tracker = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-grandpa = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-im-online = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-indices = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-identity = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-membership = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-multisig = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-offences = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-offences-benchmarking = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git', default-features = false, optional = true }
pallet-proxy = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-randomness-collective-flip = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-recovery = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-session = { branch = "master", features = ["historical"], git = 'https://github.com/stafiprotocol/stafi-blockchain.git', default-features = false }
pallet-session-benchmarking = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git', default-features = false, optional = true }
pallet-staking = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-staking-reward-curve = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-scheduler = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-sudo = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-timestamp = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-treasury = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-utility = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-transaction-payment = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-transaction-payment-rpc-runtime-api = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-vesting = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
xtoken-balances = { version = "0.6.0", default-features = false, path = "../pallets/xtoken/balances" }
rtoken-balances = { version = "0.6.0", default-features = false, path = "../pallets/rtoken/balances" }
rtoken-rate = { version = "0.6.0", default-features = false, path = "../pallets/rtoken/rate" }
rfis = { version = "0.6.0", default-features = false, path = "../pallets/rtoken/rfis" }
bridge-relayers = { version = "0.6.0", default-features = false, path = "../pallets/bridge/relayers" }
bridge-common = { version = "0.6.0", default-features = false, path = "../pallets/bridge/common", package = "bridge-common" }
bridge-swap = { version = "0.6.0", default-features = false, path = "../pallets/bridge/swap", package = "bridge-swap" }
rtoken-relayers = { version = "0.6.0", default-features = false, path = "../pallets/rtoken/relayers" }
rtoken-votes = { version = "0.6.0", default-features = false, path = "../pallets/rtoken/votes" }
rtoken-ledger = { version = "0.6.0", default-features = false, path = "../pallets/rtoken/ledger" }
rtoken-series = { version = "0.6.0", default-features = false, path = "../pallets/rtoken/series" }
xclaim = { version = "0.6.0", default-features = false, path = "../pallets/claims/xclaim" }
rclaim = { version = "0.6.0", default-features = false, path = "../pallets/claims/rclaim" }
rdexn-payers = { version = "0.6.0", default-features = false, path = "../pallets/rdexn/payers" }
rdexn-signatures = { version = "0.6.0", default-features = false, path = "../pallets/rdexn/signatures" }
rdexn-swap = { version = "0.6.0", default-features = false, path = "../pallets/rdexn/swap" }
rdex-swap = { version = "0.6.0", default-features = false, path = "../pallets/rdex/swap" }
rdex-balances = { version = "0.6.0", default-features = false, path = "../pallets/rdex/balances" }
rdex-mining = { version = "0.6.0", default-features = false, path = "../pallets/rdex/mining" }
[build-dependencies]
wasm-builder-runner = { branch = "master", package = "substrate-wasm-builder-runner", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }

[features]
default = ["std"]
with-tracing = [ "frame-executive/with-tracing" ]
std = [
	"sp-authority-discovery/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"sp-consensus-babe/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"sp-block-builder/std",
	"codec/std",
	"pallet-collective/std",
	"pallet-democracy/std",
	"pallet-elections-phragmen/std",
	"frame-executive/std",
	"pallet-finality-tracker/std",
	"pallet-grandpa/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"sp-inherents/std",
	"pallet-membership/std",
	"pallet-multisig/std",
	"pallet-identity/std",
	"pallet-scheduler/std",
	"node-primitives/std",
	"sp-offchain/std",
	"pallet-offences/std",
	"pallet-proxy/std",
	"sp-core/std",
	"pallet-randomness-collective-flip/std",
	"sp-std/std",
	"serde",
	"pallet-session/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-staking/std",
	"sp-keyring",
	"sp-session/std",
	"pallet-sudo/std",
	"frame-support/std",
	"frame-benchmarking/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"sp-transaction-pool/std",
	"pallet-utility/std",
	"sp-version/std",
	"sp-io/std",
	"pallet-recovery/std",
	"pallet-vesting/std",
	"xtoken-balances/std",
	"rtoken-balances/std",
	"rtoken-rate/std",
	"rfis/std",
	"bridge-relayers/std",
	"bridge-common/std",
	"bridge-swap/std",
	"rtoken-relayers/std",
	"rtoken-votes/std",
	"rtoken-ledger/std",
	"rtoken-series/std",
	"xclaim/std",
	"rclaim/std",
	"rdexn-payers/std",
	"rdexn-signatures/std",
	"rdexn-swap/std",
	"rdex-swap/std",
	"rdex-balances/std",
	"rdex-mining/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-elections-phragmen/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"pallet-offences-benchmarking",
	"pallet-session-benchmarking",
	"frame-system-benchmarking",
	"hex-literal",
]
